--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "phpunit/phpunit": "^5.6"
+        "doctrine/data-fixtures": "^1.2",
+        "stof/doctrine-extensions-bundle": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
